alignment fix

--- a/assets/section-myduke-hero.css
+++ b/assets/section-myduke-hero.css
@@ -160,7 +160,7 @@
 
 .myduke-hero__inner--with-form {
   flex-direction: row;
-  align-items: flex-end;
+  align-items: flex-start;
   justify-content: space-between;
   gap: 4rem;
 }
@@ -180,7 +180,7 @@
 @media screen and (max-width: 1159px) {
   .myduke-hero__inner--with-form {
     flex-direction: column;
-    gap: 3rem;
+    gap: 6rem;
   }
 
   .myduke-hero__inner--with-form .myduke-hero__content {
